<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:textSize="15dp"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:text="@string/welcome_str"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_str"
        android:textSize="15dp"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_str"
        android:textSize="15dp"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priceItalian_str"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priceJapanese_str"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priceDesserts_str"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_str"
        android:layout_margin="4dp"
        android:textSize="15dp" />

</LinearLayout>