<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpicture"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/title2"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/in_date"
            android:layout_margin="3dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:background="@drawable/button"
            android:text="@string/date_str"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center"
            android:inputType="datetime" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:background="@drawable/button"
            android:text="@string/time_str"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/in_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />


    </LinearLayout>


    <EditText
        android:id="@+id/amount_of_people"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_margin="10dp"
        android:background="#fff"
        android:gravity="center"
        android:hint="@string/howmany_str"
        android:inputType="number"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/food_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_time"
            android:layout_margin="10dp"
            android:text="@string/type_class"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/food_type_txt"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/italian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italian_str" />

            <RadioButton
                android:id="@+id/japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/japanese_str" />

            <RadioButton
                android:id="@+id/desserts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desserts_str" />

        </RadioGroup>

        <TextView
            android:id="@+id/celebrating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_time"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/celebrate_str"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bday_str" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anniversary_str" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bachelorette_str" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_of_people"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/continue_str"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />

</LinearLayout>

